--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -20,11 +20,11 @@ displayName="Alcoholism" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification <here>
 updateJSONURL="http://myurl.me/" #optional
 # A URL for the "homepage" for this mod, displayed in the mod UI
-displayURL="http://example.com/" #optional
+displayURL="https://github.com/ToxicGLaDOS/alcoholism" #optional
 # A file name (in the root of the mod JAR) containing a logo for display
 logoFile="examplemod.png" #optional
 # A text field displayed in the mod UI
-credits="Thanks for this example mod goes to Java" #optional
+credits="Thanks to TurtyWurty and TechnoVision for their modding tutorials" #optional
 # A text field displayed in the mod UI
 authors="ToxicGLaDOS (Shalo123)" #optional
 # The description text for the mod (multi line!) (#mandatory)
